package com.cinemax.salas.modelos;

public enum EstadoSala {
    DISPONIBLE,
    OCUPADA,
    MANTENIMIENTO
}
